--- a/Package.json
+++ b/Package.json
@@ -1,13 +1,11 @@
 {
-  "name": "Test",
-  "description": "Test",
-  "version": "0.0.0",
+  "name": "super-super-heroku-bot-master",
+  "version": "1.0.0",
+  "description": "Bot using heroku, 24/7!",
   "main": "bot.js",
   "scripts": {
-    "start": "node bot.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "dependencies": {
-    "discord.js": "11.1.0",
-    "request": "2.81.0"
-  }
+  "author": "",
+  "license": "ISC"
 }
