--- a/Package.json
+++ b/Package.json
@@ -1,11 +1,13 @@
 {
   "name": "super-super-heroku-bot-master",
-  "version": "1.0.0",
-  "description": "Bot using heroku, 24/7!",
+  "description": "Test",
+  "version": "0.0.0",
   "main": "bot.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node bot.js"
   },
-  "author": "",
-  "license": "ISC"
+  "dependencies": {
+    "discord.js": "11.1.0",
+    "request": "2.81.0"
+  }
 }
