--- a/Package.json
+++ b/Package.json
@@ -1,13 +1,15 @@
 {
   "name": "super-super-heroku-bot-master",
-  "description": "Test",
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "description": "Bot using heroku, 24/7!",
   "main": "bot.js",
   "scripts": {
-    "start": "node bot.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "discord.js": "11.1.0",
-    "request": "2.81.0"
+    "discord.js": "^11.2.1",
+    "request": "^2.83.0"
   }
 }
